unpackaged/main/default/objects/Alert__c/fields/Alert_Details__c.field-meta.xml
<CustomField>
    <fullName>Alert_Details__c</fullName>
    <label>Alert Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>