unpackaged/main/default/objects/Alert__c/fields/Alert_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Sub_Type__c</fullName>
    <label>Alert Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Alert_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0301 Potentially Dangerous Animal on Premises</fullName>
            </value>
            <value>
                <fullName>0302 Potentially Dangerous Person on Premises</fullName>
            </value>
            <value>
                <fullName>0303 Potentially Dangerous Environment</fullName>
            </value>
            <value>
                <fullName>0401 Allergy</fullName>
            </value>
            <value>
                <fullName>0402 Dietary Alert</fullName>
            </value>
            <value>
                <fullName>0403 Infectious Condition</fullName>
            </value>
            <value>
                <fullName>0404 Adverse Drug Reaction</fullName>
            </value>
            <value>
                <fullName>0405 Serious Medical Condition</fullName>
            </value>
            <value>
                <fullName>0406 Drug Seeking Behaviour</fullName>
            </value>
            <value>
                <fullName>0408 Clozapine</fullName>
            </value>
            <value>
                <fullName>0701 At Risk of Abuse</fullName>
            </value>
            <value>
                <fullName>0702 At Risk of Self harm</fullName>
            </value>
            <value>
                <fullName>0703 Suicidal Alert</fullName>
            </value>
            <value>
                <fullName>0704 Violent / Destructive</fullName>
            </value>
            <value>
                <fullName>0705 Weapon (Include Firearm)</fullName>
            </value>
            <value>
                <fullName>0706 Protocol / Standing Order</fullName>
            </value>
            <value>
                <fullName>0707 Heatwave Vulnerability</fullName>
            </value>
            <value>
                <fullName>0708 Fire</fullName>
            </value>
            <value>
                <fullName>0709 Absconding</fullName>
            </value>
            <value>
                <fullName>0710 Nutrition</fullName>
            </value>
            <value>
                <fullName>0711 Falls</fullName>
            </value>
            <value>
                <fullName>0712 Pressure Injury</fullName>
            </value>
            <value>
                <fullName>0303Potentially Dangerous Environment</fullName>
                <isActive>false</isActive>
                <label>0303Potentially Dangerous Environment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>