unpackaged/main/default/objects/Alert__c/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <label>Alert Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0100 Cultural/ Family Need</fullName>
            </value>
            <value>
                <fullName>0200 Disability</fullName>
            </value>
            <value>
                <fullName>0300 Environment/OH&amp;S Hazard</fullName>
            </value>
            <value>
                <fullName>0400 Medical Alert</fullName>
            </value>
            <value>
                <fullName>0500 Mobility Alert</fullName>
            </value>
            <value>
                <fullName>0600 Restrict Information</fullName>
            </value>
            <value>
                <fullName>0700 Risk</fullName>
            </value>
            <value>
                <fullName>0800 Client Name Alert</fullName>
            </value>
            <value>
                <fullName>9800 Other</fullName>
            </value>
            <value>
                <fullName>9900 Alert Migration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>