unpackaged/main/default/objects/Alert__c/fields/Close_by__c.field-meta.xml
<CustomField>
    <fullName>Close_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Close by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>