unpackaged/main/default/objects/Alert__c/fields/Initiated_by__c.field-meta.xml
<CustomField>
    <fullName>Initiated_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiated by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Alerts2</relationshipName>
    <type>Lookup</type>
</CustomField>