unpackaged/main/default/objects/Alert__c/fields/Review_Details__c.field-meta.xml
<CustomField>
    <fullName>Review_Details__c</fullName>
    <label>Review Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>