unpackaged/main/default/objects/Alert__c/fields/Review_Due__c.field-meta.xml
<CustomField>
    <fullName>Review_Due__c</fullName>
    <formula>ADDMONTHS (Start_Date__c, 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review Due</label>
    <type>Date</type>
</CustomField>