unpackaged/main/default/objects/Alert__c/validationRules/Alert_Sub_Type_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Alert_Sub_Type_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
TEXT(Alert_Type__c ) == &#39;0300 Environment/OH&amp;S Hazard&#39;,
TEXT(Alert_Type__c ) == &#39;0400 Medical Alert&#39;,
TEXT(Alert_Type__c ) == &#39;0700 Risk&#39;
),
ISBLANK(TEXT(Alert_Sub_Type__c)) )</errorConditionFormula>
    <errorDisplayField>Alert_Sub_Type__c</errorDisplayField>
    <errorMessage>Please provide the Alert Sub Type.</errorMessage>
</ValidationRule>