unpackaged/main/default/objects/Alert__c/validationRules/Close_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Date_Validation</fullName>
    <active>true</active>
    <description>Close date cannot be in the past of Review Date and Start Date</description>
    <errorConditionFormula>OR(Close_Date__c  &lt;  Start_Date__c, Close_Date__c  &lt;  Review_Date__c



)</errorConditionFormula>
    <errorMessage>Close Date should be greater than Start and Review Date</errorMessage>
</ValidationRule>