unpackaged/main/default/objects/Alert__c/validationRules/Disability_Closure_Alert.validationRule-meta.xml
<ValidationRule>
    <fullName>Disability_Closure_Alert</fullName>
    <active>true</active>
    <description>This alert can not be closed</description>
    <errorConditionFormula>AND( ISPICKVAL( Alert_Type__c , &quot;0200 Disability&quot;),  
OR(
ISPICKVAL( Status__c , &quot;Closed&quot;),
NOT(ISBLANK( Close_by__c )),
NOT(ISBLANK( Close_Date__c )),
NOT(ISBLANK( Close_Reason__c ))
)
)</errorConditionFormula>
    <errorMessage>This alert can not be closed.</errorMessage>
</ValidationRule>