unpackaged/main/default/objects/Alert__c/validationRules/Review_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Review_Date_Validation</fullName>
    <active>true</active>
    <description>Review Date cannot be in the past of Start Date.
Review Date cannot pass Close Date.</description>
    <errorConditionFormula>OR( Review_Date__c  &lt;  Start_Date__c ,  Review_Date__c  &gt;  Close_Date__c 


)</errorConditionFormula>
    <errorMessage>Review Date should be greater than Start Date and less then Close Date</errorMessage>
</ValidationRule>