unpackaged/main/default/objects/Alert__c/validationRules/Status_changed_to_close.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_changed_to_close</fullName>
    <active>true</active>
    <description>Once the status is changed to close, Close Date, Close Reason, Close By cant be blank.</description>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &#39;Closed&#39;), 
NOT( ISPICKVAL( Alert_Type__c , &#39;0200 Disability&#39;) ) ,
   OR( ISBLANK(Close_by__c    ) ,
						ISBLANK( Close_Reason__c ) , 
						ISNULL( Close_Date__c ) ) 


)</errorConditionFormula>
    <errorMessage>Close Date, Close Reason and Close By can not be blank.</errorMessage>
</ValidationRule>